se agregó cambio de texto a servicios

--- a/servicios.html
+++ b/servicios.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        servicios header
+        servicios header con un cambio
     </header>
     <main>
         servicios main
